Text align fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
 
 .cell {
   font-family: Helvetica;
+  text-align: center;
   font-size: 30px;
   border: 1px solid black;
   width: 59px;
